# causal-inference-clinical

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
causal/: __init__.py  did.py  matching.py  sensitivity.py  synthetic_control.py  utils.py
causal/data/: __init__.py  simulate.py
notebooks/: case_study.ipynb  dev_walkthrough.ipynb
tests/: conftest.py  test_did.py  test_matching.py  test_sensitivity.py  test_simulate.py  test_smoke.py  test_synthetic_control.py
